Update .gitignore for auxiliary files

--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,23 @@ setup.log
 
 # Local OPAM switch
 _opam/
+
+
+# LaTeX Generated Files
+*.aux
+*.bbl
+*.blg
+*.fdb_latexmk
+*.fls
+*.log
+*.out
+*.synctex.gz
+*.toc
+*.xmpdata
+*.nav
+*.snm
+*.ind
+*.ilg
+*.idx
+*.dvi
+*.xmpi
