.pdf are not needed on the repository

--- a/.gitignore
+++ b/.gitignore
@@ -43,6 +43,9 @@ _opam/
 *.xmpdata
 *.xmpi
 
+# Additionally, I've added .pdf file to the list of ignored files
+*.pdf
+
 ## Intermediate documents:
 *.dvi
 *-converted-to.*
