Remove .exe files from the repo

--- a/.gitignore
+++ b/.gitignore
@@ -46,6 +46,9 @@ _opam/
 # Additionally, I've added .pdf file to the list of ignored files
 *.pdf
 
+# Exectuable files
+*.exe
+
 ## Intermediate documents:
 *.dvi
 *-converted-to.*
@@ -262,3 +265,4 @@ build/
 # generated PDFs
 Priimek-Vpisna-Leto.pdf
 playground/graph/temp.ml
+playground/graph/graph_examples.exe
