Add a parallel implementation of calculating fibonacci numbers

--- a/playground/graph/dune
+++ b/playground/graph/dune
@@ -1,5 +1,5 @@
 (executable
- (name graph_examples)
- (promote
-  (until-clean))
-  )
+ (name fib)
+ (promote (until-clean))
+ (libraries domainslib unix)
+ )
