Add measures for performances of non parallel vs parallel

--- a/playground/graph/dune
+++ b/playground/graph/dune
@@ -1,5 +1,12 @@
 (executable
- (name fib_par)
+ (name fib_examples)
  (promote (until-clean))
- (libraries domainslib unix)
+ (libraries domainslib unix fib)
+ (modules fib_examples)
  )
+
+(library
+ (name fib)
+ (modules fib)
+ (libraries domainslib unix)
+)
