Popravki pred dolgo predstavitvijo

--- a/playground/graph/dune
+++ b/playground/graph/dune
@@ -1,5 +1,12 @@
 (executable
-  (name bfs_examples)
-  (libraries base stdio domainslib)
-  (modules bfs graph bfs_examples graph_examples)
-  (promote (until-clean)))
+ (name fib_examples)
+ (promote (until-clean))
+ (libraries domainslib unix fib)
+ (modules fib_examples)
+ )
+
+(library
+ (name fib)
+ (modules fib)
+ (libraries domainslib unix)
+)
