WIP Implemented parallel BFS

--- a/.gitignore
+++ b/.gitignore
@@ -267,3 +267,4 @@ Priimek-Vpisna-Leto.pdf
 playground/graph/temp.ml
 playground/graph/graph_examples.exe
 playground/graph/dune_file_contents.txt
+playground/graph/dune_file_contents.md
