Refactor BFS methods for better readability

--- a/playground/graph/dune
+++ b/playground/graph/dune
@@ -3,5 +3,5 @@
   (libraries base stdio domainslib parany)
   (modules bfs graph bfs_examples graph_examples)
   (promote (until-clean))
-  (flags :standard -w "-32")
+  ;(flags :standard -w "-32-50")
 )
