Add a functional implementation of priority queue

--- a/playground/graph/dune
+++ b/playground/graph/dune
@@ -1,7 +1,7 @@
 (executable
-  (name dijkstra_examples)
+  (name priority_queue_examples)
   (libraries base stdio domainslib)
-  (modules dijkstra graph dijkstra_examples graph_examples)
+  (modules priority_queue graph priority_queue_examples graph_examples)
   (promote (until-clean))
   (flags :standard -w "-32-33-70")
   )
