Added priority field to the module PQ

--- a/playground/graph/dune
+++ b/playground/graph/dune
@@ -1,7 +1,6 @@
 (executable
-  (name priority_queue_examples)
+  (name dijkstra_examples)
   (libraries base stdio domainslib)
-  (modules priority_queue graph priority_queue_examples graph_examples)
+  (modules dijkstra graph dijkstra_examples graph_examples)
   (promote (until-clean))
-  (flags :standard -w "-32-33-70")
   )
