--- a/.gitignore
+++ b/.gitignore
@@ -268,3 +268,4 @@ playground/graph/temp.ml
 playground/graph/graph_examples.exe
 playground/graph/dune_file_contents.txt
 playground/graph/dune_file_contents.md
+playground/graph/tmp.ml
