--- a/playground/graph/dune
+++ b/playground/graph/dune
@@ -1,7 +1,6 @@
 (executable
-  (name dijkstra_examples)
-  (libraries base stdio domainslib)
-  (modules dijkstra graph dijkstra_examples graph_examples)
-  (promote (until-clean))
-  (flags :standard -w "-69")
-  )
+  (name bfs_examples)
+  (libraries base stdio domainslib parany)
+  (modules bfs graph bfs_examples graph_examples)
+  (flags :standard -w "-21")
+  (promote (until-clean)))
