--- a/playground/graph/dune
+++ b/playground/graph/dune
@@ -2,5 +2,5 @@
   (name bfs_examples)
   (libraries base stdio domainslib parany)
   (modules bfs graph bfs_examples graph_examples)
-  (flags :standard -w "-21-32-27")
+  ; (flags :standard -w "-21-32-27-33")
   (promote (until-clean)))
