--- a/playground/graph/dune
+++ b/playground/graph/dune
@@ -1,6 +1,7 @@
 (executable
-  (name bfs_examples)
-  (libraries base stdio domainslib parany)
-  (modules bfs graph bfs_examples graph_examples)
-  ; (flags :standard -w "-21-32-27-33")
-  (promote (until-clean)))
+  (name dijkstra_examples)
+  (libraries base stdio domainslib)
+  (modules dijkstra graph dijkstra_examples graph_examples)
+  (promote (until-clean))
+  ; (flags :standard -w "-32-33-70")
+  )
