--- a/playground/graph/dune
+++ b/playground/graph/dune
@@ -3,5 +3,5 @@
   (libraries base stdio domainslib)
   (modules dijkstra graph dijkstra_examples graph_examples)
   (promote (until-clean))
-  ; (flags :standard -w "-32-33-70")
+  (flags :standard -w "-32-33")
   )
