--- a/playground/graph/dune
+++ b/playground/graph/dune
@@ -1,12 +1,5 @@
 (executable
- (name fib_examples)
- (promote (until-clean))
- (libraries domainslib unix fib)
- (modules fib_examples)
- )
-
-(library
- (name fib)
- (modules fib)
- (libraries domainslib unix)
-)
+ (name graph_examples)
+ (libraries unix)
+ (promote
+  (until-clean)))
