--- a/playground/graph/dune
+++ b/playground/graph/dune
@@ -1,7 +1,6 @@
 (executable
-  (name fib_errors)
-  (libraries base stdio domainslib)
-  (modules floyd graph fib_errors)
-  (promote (until-clean))
-  ; (flags :standard -w "-32-33")
-  )
+ (name dijkstra_examples)
+ (libraries base stdio domainslib)
+ (modules dijkstra graph dijkstra_examples graph_examples)
+ (promote (until-clean))
+ (flags :standard -w "-32-33-70"))
